# libdrawio

./: .gitignore  AUTHORS  Makefile.am  README  TODO  autogen.sh  buildnumber.sh  compile_commands.json  configure.ac  libdrawio.pc.in
.cache/clangd/index/: DRAWIODocument.cpp.1DDD057B82CFBD8F.idx  DRAWIODocument.h.D66E41AA2D0AAD8C.idx  config.h.3F7BAEBB63CB6F83.idx  libdrawio.h.EABC818FB9F63724.idx  libdrawio_utils.cpp.D044BC6230573D39.idx  libdrawio_utils.h.B92CCF1A87BC3EBB.idx
docs/doxygen/: doxygen.cfg
inc/: Makefile.am
inc/libdrawio/: DRAWIODocument.h  Makefile.am  libdrawio.h
src/: Makefile.am
src/conv/: Makefile.am
src/fuzz/: Makefile.am  convnamefuzzer.cpp
src/lib/: #DRAWIOStyle.h#  #DRAWIOTypes.h#  .#DRAWIOTypes.h  .gitignore  DRAWIODocument.cpp  DRAWIOPage.cpp  DRAWIOPage.h  DRAWIOParser.cpp  DRAWIOParser.h  DRAWIOShapeList.cpp  DRAWIOShapeList.h  DRAWIOStyle.h  DRAWIOTokenMap.cpp  DRAWIOTokenMap.h  DRAWIOTypes.h  DRAWIOUserObject.h  MXCell.cpp  MXCell.h  MXGeometry.h  Makefile.am  libdrawio.rc.in  libdrawio_utils.cpp  libdrawio_utils.h  libdrawio_xml.cpp  libdrawio_xml.h  tokenhash.h  tokens.gperf  tokens.h  tokens.txt
src/test/: .$draw_test.drawio.bkp  Makefile.am  draw_test.drawio  test.cpp
